Fix alignment issues with Edit form. Fix login styles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,11 +176,6 @@ link:hover {
   margin-bottom: 0;
 }
 
-.form-control {
-  margin-bottom: 1rem;
-  /* width: unset; */
-}
-
 .nav-item a {
   color: var(--color-dark);
 }
@@ -207,8 +202,14 @@ link:hover {
 }
 
 .btn-right {
-  margin-top: 0.5rem;
-  align-self: center;
+  align-self: end;
+}
+
+.input-left {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  margin-bottom: 20px;
 }
 
 .loader {
@@ -288,25 +289,20 @@ link:hover {
 }
 
 /* Auth */
-.form-group,
-.form-group label,
-.form-group input {
-  /* width: 100%; */
-  /* margin-bottom: 0.5rem; */
-}
-
 .form-group label {
   font-size: 0.8rem;
 }
 
-/* .form-group input {
+.login-input {
   padding: 10px 20px;
   border: none;
   border-bottom: 3px solid transparent;
   background-color: var(--color-gray);
   outline-width: 0;
   font-size: 1rem;
-} */
+  width: 100%;
+  margin-bottom: 0.5rem;
+}
 
 .form-group input:focus {
   border-bottom: 3px solid var(--color-tertiary);
